@@ -17,6 +17,7 @@ export(map_line)
 export(map_lines)
 export(map_points)
 export(map_proj)
+export(map_range)
 export(map_setup)
 export(map_text)
 export(random_data)
